refact: improve code, make it more stable

--- a/microsoft/outlook/config.ini
+++ b/microsoft/outlook/config.ini
@@ -1,5 +1,9 @@
+[GLOBAL]
+profile_name = "DEFAULT"
+
 [DEFAULT]
 setUnread = False
 processMails = False
 debug = False
 sleep_timer = 60
+sound_file = "rap.wav"
