refact: make csv-prefix interchangable

--- a/microsoft/outlook/config.ini
+++ b/microsoft/outlook/config.ini
@@ -3,7 +3,8 @@ profile_name = DEFAULT
 
 [DEFAULT]
 setUnread = False
-processMails = False
+saveMails = False
 debug = False
 sleep_timer = 60
-sound_file = "rap.wav"
+sound_file = rap.wav
+csv_filename = mails
