fix: missed to update config.ini

--- a/microsoft/outlook/config.ini
+++ b/microsoft/outlook/config.ini
@@ -2,8 +2,8 @@
 profile_name = DEFAULT
 
 [DEFAULT]
-setUnread = False
-saveMails = False
+set_unread = False
+save_mails = False
 debug = False
 sleep_timer = 60
 sound_file = rap.wav
