debug: try to solve the issues with params

--- a/apis/win/microsoft/teams/config.ini
+++ b/apis/win/microsoft/teams/config.ini
@@ -1,3 +1,4 @@
 [Settings]
-pause = 3
-teams_app_path = "/AppData/Local/Microsoft/Teams/current/Teams.exe"
+initial_delay = 4
+pause = 1
+teams_app_path = /AppData/Local/Microsoft/Teams/current/Teams.exe
