feat: add string reader with tesseract

--- a/apis/win/microsoft/teams/config.ini
+++ b/apis/win/microsoft/teams/config.ini
@@ -2,3 +2,5 @@
 initial_delay = 4
 pause = 1
 teams_app_path = /AppData/Local/Microsoft/Teams/current/Teams.exe
+tesseract_exec_path = /AppData/Local/Programs/Tesseract-OCR/tesseract.exe
+tesseract_data_path = /AppData/Local/Programs/Tesseract-OCR/tessdata
